[package]
name = "stock-display"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.133", features = ["derive"] }
tokio = { version = "1.15.0", features = ["full"] }
reqwest = { version = "0.11.8", features = ["json"] }
plotlib = "0.5.1"
termsize = "0.1.6"
console = "0.15.0"
colored = "2.0.0"

[profile.dev]
opt-level = 0
overflow-checks = false
debug = true

[profile.release]
overflow-checks = true
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1